package vn.ghtk.demo.catalog.domain.attribute;

public record AttributeValue(AttributeId attributeId,
                             Object value) {
}
